// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test EventReporter class Test sendEvent method should call broker emit with changes 1`] = `
[
  {
    "description": undefined,
    "labelNames": [],
    "name": "os.datetime.utc",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 123456,
      },
    ],
  },
  {
    "description": "Test Info Metric",
    "labelNames": [],
    "name": "test.info",
    "type": "info",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": "Test Value",
      },
    ],
  },
  {
    "description": "Test Counter Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.counter",
    "type": "counter",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 5,
      },
      {
        "key": ""posts\\comments"",
        "labels": {
          "action": "posts\\comments",
        },
        "timestamp": 12345678000,
        "value": 8,
      },
    ],
  },
  {
    "description": "Test Gauge Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.gauge-total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": ""users-"John""",
        "labels": {
          "action": "users-"John"",
        },
        "timestamp": 12345678000,
        "value": -8,
      },
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": {
          "action": "posts",
        },
      },
    ],
  },
  {
    "description": undefined,
    "labelNames": [
      "action",
    ],
    "name": "test.histogram",
    "type": "histogram",
    "unit": "byte",
    "values": [
      {
        "buckets": {
          "1": 0,
          "10": 4,
          "100": 4,
          "1000": 4,
          "10000": 4,
          "25": 4,
          "250": 4,
          "2500": 4,
          "5": 2,
          "50": 4,
          "500": 4,
          "5000": 4,
        },
        "count": 4,
        "key": "",
        "labels": {},
        "lastValue": 2,
        "max": 8,
        "mean": 4.5,
        "min": 2,
        "quantiles": {
          "0.5": 2,
          "0.9": 8,
          "0.95": 8,
          "0.99": 8,
          "0.999": 8,
        },
        "stdDev": 3,
        "sum": 18,
        "timestamp": 12345678000,
        "variance": 9,
      },
      {
        "buckets": {
          "1": 1,
          "10": 3,
          "100": 3,
          "1000": 3,
          "10000": 3,
          "25": 3,
          "250": 3,
          "2500": 3,
          "5": 2,
          "50": 3,
          "500": 3,
          "5000": 3,
        },
        "count": 3,
        "key": ""auth"",
        "labels": {
          "action": "auth",
        },
        "lastValue": 7,
        "max": 7,
        "mean": 3.6666666666666665,
        "min": 1,
        "quantiles": {
          "0.5": 3,
          "0.9": 7,
          "0.95": 7,
          "0.99": 7,
          "0.999": 7,
        },
        "stdDev": 3.0550504633038935,
        "sum": 11,
        "timestamp": 12345678000,
        "variance": 9.333333333333334,
      },
    ],
  },
]
`;

exports[`Test EventReporter class Test sendEvent method with onlyChanges should call broker.broadcast 1`] = `
[
  {
    "description": "Moleculer implementation type",
    "labelNames": [],
    "name": "moleculer.node.type",
    "type": "info",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": "nodejs",
      },
    ],
  },
  {
    "description": "Moleculer protocol version",
    "labelNames": [],
    "name": "moleculer.node.versions.protocol",
    "type": "info",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": "4",
      },
    ],
  },
  {
    "description": "Moleculer namespace",
    "labelNames": [],
    "name": "moleculer.broker.namespace",
    "type": "info",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": "",
      },
    ],
  },
  {
    "description": "ServiceBroker started",
    "labelNames": [],
    "name": "moleculer.broker.started",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 0,
      },
    ],
  },
  {
    "description": "Number of local services",
    "labelNames": [],
    "name": "moleculer.broker.local.services.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 1,
      },
    ],
  },
  {
    "description": "Number of local middlewares",
    "labelNames": [],
    "name": "moleculer.broker.middlewares.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 13,
      },
    ],
  },
  {
    "description": "Number of registered nodes",
    "labelNames": [],
    "name": "moleculer.registry.nodes.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 1,
      },
    ],
  },
  {
    "description": "Number of online nodes",
    "labelNames": [],
    "name": "moleculer.registry.nodes.online.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 1,
      },
    ],
  },
  {
    "description": "Number of registered services",
    "labelNames": [],
    "name": "moleculer.registry.services.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 0,
      },
    ],
  },
  {
    "description": "Number of registered actions",
    "labelNames": [],
    "name": "moleculer.registry.actions.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 0,
      },
    ],
  },
  {
    "description": "Number of registered events",
    "labelNames": [],
    "name": "moleculer.registry.events.total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 0,
      },
    ],
  },
  {
    "description": undefined,
    "labelNames": [],
    "name": "os.datetime.utc",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 123456,
      },
    ],
  },
  {
    "description": "Test Info Metric",
    "labelNames": [],
    "name": "test.info",
    "type": "info",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": "Test Value",
      },
    ],
  },
  {
    "description": "Test Counter Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.counter",
    "type": "counter",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 5,
      },
      {
        "key": ""posts\\comments"",
        "labels": {
          "action": "posts\\comments",
        },
        "timestamp": 12345678000,
        "value": 8,
      },
    ],
  },
  {
    "description": "Test Gauge Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.gauge-total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": ""users-"John""",
        "labels": {
          "action": "users-"John"",
        },
        "timestamp": 12345678000,
        "value": -8,
      },
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": {
          "action": "posts",
        },
      },
    ],
  },
  {
    "description": undefined,
    "labelNames": [
      "action",
    ],
    "name": "test.histogram",
    "type": "histogram",
    "unit": "byte",
    "values": [
      {
        "buckets": {
          "1": 0,
          "10": 4,
          "100": 4,
          "1000": 4,
          "10000": 4,
          "25": 4,
          "250": 4,
          "2500": 4,
          "5": 2,
          "50": 4,
          "500": 4,
          "5000": 4,
        },
        "count": 4,
        "key": "",
        "labels": {},
        "lastValue": 2,
        "max": 8,
        "mean": 4.5,
        "min": 2,
        "quantiles": {
          "0.5": 2,
          "0.9": 8,
          "0.95": 8,
          "0.99": 8,
          "0.999": 8,
        },
        "stdDev": 3,
        "sum": 18,
        "timestamp": 12345678000,
        "variance": 9,
      },
      {
        "buckets": {
          "1": 1,
          "10": 3,
          "100": 3,
          "1000": 3,
          "10000": 3,
          "25": 3,
          "250": 3,
          "2500": 3,
          "5": 2,
          "50": 3,
          "500": 3,
          "5000": 3,
        },
        "count": 3,
        "key": ""auth"",
        "labels": {
          "action": "auth",
        },
        "lastValue": 7,
        "max": 7,
        "mean": 3.6666666666666665,
        "min": 1,
        "quantiles": {
          "0.5": 3,
          "0.9": 7,
          "0.95": 7,
          "0.99": 7,
          "0.999": 7,
        },
        "stdDev": 3.0550504633038935,
        "sum": 11,
        "timestamp": 12345678000,
        "variance": 9.333333333333334,
      },
    ],
  },
]
`;

exports[`Test EventReporter class Test sendEvent method with onlyChanges should send changes only 1`] = `
[
  {
    "description": "Test Counter Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.counter",
    "type": "counter",
    "unit": undefined,
    "values": [
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": 12,
      },
      {
        "key": ""posts\\comments"",
        "labels": {
          "action": "posts\\comments",
        },
        "timestamp": 12345678000,
        "value": 8,
      },
    ],
  },
  {
    "description": "Test Gauge Metric",
    "labelNames": [
      "action",
    ],
    "name": "test.gauge-total",
    "type": "gauge",
    "unit": undefined,
    "values": [
      {
        "key": ""users-"John""",
        "labels": {
          "action": "users-"John"",
        },
        "timestamp": 12345678000,
        "value": -8,
      },
      {
        "key": "",
        "labels": {},
        "timestamp": 12345678000,
        "value": {
          "action": "posts",
        },
      },
      {
        "key": ""posts"",
        "labels": {
          "action": "posts",
        },
        "timestamp": 12345678000,
        "value": -5,
      },
    ],
  },
]
`;
